--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
       <li>Offline support</li>
     </ul>
 
-    <a href="#privacy" class="button">View Privacy Policy</a>
-
     <div id="privacy" class="section">
       <h2>Privacy Policy for Flagz</h2>
       <pre>
@@ -87,6 +85,8 @@ Flagz is suitable for users of all ages and does not knowingly collect data from
 
 5. Changes to This Privacy Policy
 We may update this Privacy Policy in the future. Any changes will be reflected on this page. Since we do not collect user contact details, we encourage users to check this page periodically for updates.
+
+6. If you have any questions, concerns, or feedback regarding this Privacy Policy or the Flagz app, feel free to contact the developer. You can reach us at gursimran1132@gmail.com or call +91-7304434490
       </pre>
     </div>
 
