--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
       <li>Offline support</li>
     </ul>
 
+
+    <!-- App Logo -->
+<div style="margin-top: 30px; text-align: center;">
+  <img src="flagz_app_icon.png" alt="Flagz Logo" style="width: 120px; border-radius: 12px;" />
+</div>
+
+<!-- Screenshots -->
+<div style="margin-top: 20px; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+  <img src="spl_screen.png" alt="Flagz Screenshot 1" style="width: 45%; max-width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <img src="country_screen.png" alt="Flagz Screenshot 2" style="width: 45%; max-width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <img src="germany.png" alt="Flagz Screenshot 3" style="width: 45%; max-width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+</div>
+    
+
+
     <div id="privacy" class="section">
       <h2>Privacy Policy for Flagz</h2>
       <pre>
